gcc/testsuite/g++.old-deja/g++.other/conv1.C
// { dg-do assemble  }

class X {
public:
  const operator int (); // { dg-error "" } invalid declaration.
};
